--- a/index.html
+++ b/index.html
@@ -579,23 +579,37 @@
             　</span>
         </div>
         </div>
-        <div class="col-xs-12 text-center txt underline">
-            <h2 class="col-xs-12" style="font-family: 'Pattaya', sans-serif;
-                color: #283a44; padding-bottom: 0px;">Lời hứa từ anh</h2>
+            <div class="col-xs-12 text-center txt underline">
+                <h2 class="col-xs-12" style="font-family: 'Pattaya', sans-serif;
+                    color: #283a44; padding-bottom: 0px;">Lời hứa từ anh</h2>
+            </div>
+            <div class="col-xs-12 text-center " data-anijs="if: scroll,on: window,do: zoomInDown animated, before: $scrollReveal repeat">
+                <span class="col-xs-12" style="font-family: 'Dancing Script', cursive;color: #a81723; font-size: 20px;
+                    margin: 15px;padding: 15px;line-height: 33px">
+                Gặp em và yêu em đó là định mệnh đã được sắp đặt cho anh. <br>
+                Cuộc sống này là sự hòa hợp giữa bầu trời và mặt đất, anh sẽ che chở em khỏi gió và mưa, cùng em cất vang tiếng hát giai điệu của tình yêu.<br>
+                Anh xin thề sẽ yêu em vô điều kiện, trân trọng em, trái tim anh chỉ có em, chỉ có hai chúng ta, chỉ có gia đình của chúng ta là duy nhất, và nó sẽ không thay đổi<br>
+                Bất kể thời tiết, thăng trầm trong cuộc sống, yếu hay khỏe, anh cũng sẽ đi cùng em. Dù trái đất có ngừng quay và mặt trời ngừng toả sáng, anh cũng sẽ thuộc về em. <br>
+                Dẫu cho đến một ngày bước chân của em không còn vững, mái tóc đen đã chuyển màu bạc trắng, khuôn mặt xinh đẹp đã ẩn chứa nhiều nếp nhăn. Anh vẫn sẽ nắm lấy tay em,  cùng em bước đi trong ánh hào quang của hoàng hôn.<br>
+                Anh hứa sẽ luôn thành thật với em. Sẽ không bao giờ khiến em phải buồn.<br/>
+                Anh hứa sẽ là người hỗ trợ em, yêu em, bảo vệ em và xây dựng một ngôi nhà ấm áp với em, một ngôi nhà mà chúng ta có thể tự hào.<br/>
+                Thật vinh dự vì được làm ngoại lệ của em.
+                　</span>
+            </div>
         </div>
-        <div class="col-xs-12 text-center " data-anijs="if: scroll,on: window,do: zoomInDown animated, before: $scrollReveal repeat">
-            <span class="col-xs-12" style="font-family: 'Dancing Script', cursive;color: #a81723; font-size: 20px;
-                margin: 15px;padding: 15px;line-height: 33px">
-            Gặp em và yêu em đó là định mệnh đã được sắp đặt cho anh. <br>
-            Cuộc sống này là sự hòa hợp giữa bầu trời và mặt đất, anh sẽ che chở em khỏi gió và mưa, cùng em cất vang tiếng hát giai điệu của tình yêu.<br>
-            Anh xin thề sẽ yêu em vô điều kiện, trân trọng em, trái tim anh chỉ có em, chỉ có hai chúng ta, chỉ có gia đình của chúng ta là duy nhất, và nó sẽ không thay đổi<br>
-            Bất kể thời tiết, thăng trầm trong cuộc sống, yếu hay khỏe, anh cũng sẽ đi cùng em. Dù trái đất có ngừng quay và mặt trời ngừng toả sáng, anh cũng sẽ thuộc về em. <br>
-            Dẫu cho đến một ngày bước chân của em không còn vững, mái tóc đen đã chuyển màu bạc trắng, khuôn mặt xinh đẹp đã ẩn chứa nhiều nếp nhăn. Anh vẫn sẽ nắm lấy tay em,  cùng em bước đi trong ánh hào quang của hoàng hôn.<br>
-            Anh hứa sẽ luôn thành thật với em. Sẽ không bao giờ khiến em phải buồn.<br/>
-            Anh hứa sẽ là người hỗ trợ em, yêu em, bảo vệ em và xây dựng một ngôi nhà ấm áp với em, một ngôi nhà mà chúng ta có thể tự hào.<br/>
-            Thật vinh dự vì được làm ngoại lệ của em.
-            　</span>
-        </div>
+        <div>
+            <div id="end" class="col-xs-12 text-center txt underline" data-anijs="if: mouseover, do: swing animated">
+                <h2 class="col-xs-12" style="font-family: 'Srisakdi', cursive;
+                    color: #283a44; padding-bottom: 0px; font-weight: bold;">Anh là Tiến Võ nhận em Cát Minh làm vợ của anh</h2>
+                <h2 class="col-xs-12" style="font-family: 'Srisakdi', cursive;
+                    color: #283a44; padding-bottom: 0px; font-weight: bold;">Anh hứa giữ lòng chung thủy với em</h2>
+                <h2 class="col-xs-12" style="font-family: 'Srisakdi', cursive;
+                    color: #283a44; padding-bottom: 0px; font-weight: bold;">Khi thịnh vượng cũng như lúc gian nan</h2>
+                <h2 class="col-xs-12" style="font-family: 'Srisakdi', cursive;
+                    color: #283a44; padding-bottom: 0px; font-weight: bold;">Khi mạnh khỏe cũng như lúc đau yếu</h2>
+                <h2 class="col-xs-12" style="font-family: 'Srisakdi', cursive;
+                    color: #283a44; padding-bottom: 0px; font-weight: bold;">Để yêu thương và tôn trọng em mọi ngày suốt đời anh</h2>
+            </div>
         </div>
         <div class="col-xs-12 text-center txt underline">
             <h2 class="col-xs-12" style="font-family: 'Pattaya', sans-serif;
@@ -681,10 +695,10 @@
             <source src="911.mp3">
           </audio> -->
         <audio controls autoplay id="playAudio" style="display: none;">
-            <source src="911.mp3" type="audio/mpeg">
+            <source src="/911.mp3" type="audio/mpeg">
         </audio>
-        <iframe src="audio/911.mp3" allow="autoplay" style="display:none" id="iframeAudio">
-        </iframe>
+<!--        <iframe src="audio/911.mp3" allow="autoplay" style="display:none" id="iframeAudio">-->
+<!--        </iframe>-->
         <script src="public/js/anijs-min.js"></script>
         <script src="public/js/anijs-helper-scrollreveal-min.js"></script>
         <script src="public/js/flu.js" type="text/javascript"></script>
@@ -708,9 +722,9 @@
                 var isChrome = /Chrome/.test(navigator.userAgent) && /Google Inc/.test(navigator.vendor);
 
                 if(!isChrome){
-                    $('#iframeAudio').remove()
+                    // $('#iframeAudio').remove()
                 } else {
-                    $('#playAudio').remove() //just to make sure that it will not have 2x audio in the background
+                    // $('#playAudio').remove() //just to make sure that it will not have 2x audio in the background
                 }
             });
 
