--- a/index.html
+++ b/index.html
@@ -667,6 +667,11 @@
                     <img src="images/p10.jpg" alt="ảnh kỷ niệm" />
                     </a>
                 </li>
+                <li>
+                    <a href="images/p11.jpg">
+                        <img src="images/p11.jpg" alt="ảnh kỷ niệm" />
+                    </a>
+                </li>
             </ul>
         </div>
 
