--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
         <!-- <audio id="bgmMusic" type="audio/mp3" autoplay loop  id="playAudio">
             <source src="911.mp3">
           </audio> -->
-        <audio controls autoplay id="playAudio" style="display: none;">
+        <audio controls autoplay id="playAudio">
             <source src="audio/911.mp3" type="audio/mpeg">
         </audio>
 <!--        <iframe src="audio/911.mp3" allow="autoplay" style="display:none" id="iframeAudio">-->
