--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         </script>
     </head>
     <body class="body">
-        <div id="loader">
+        <div id="loader" style="width: 100%; height: 100%; display: flex; justify-content: center; justify-items: center; align-items: center">
             <div rel="like">
-                <p id="startbtn" style="text-align: center; font-size: 20px;margin-bottom: 0px;
+                <p id="startbtn" style="align-items: center; font-size: 20px;margin-bottom: 0px;
                 margin-top: 85px;font-family: 'Pattaya', sans-serif; cursor:pointer;">Vợ yêu, nhấn vào đây</p>
             </div>
         </div>
