--- a/index.html
+++ b/index.html
@@ -556,6 +556,144 @@
                                         </div>
                                     </div>
                                 </li>
+                                <li data-anijs="if: scroll, on: window, do: rollIn animated, before: $scrollReveal repeat" class="timeline-inverted  col-xs-12">
+                                    <div class="timeline-badge wow fadeInUp" data-wow-delay="0.5s" style="">
+                                        <i class="fas fa-heart"></i>
+                                    </div>
+                                    <div class="timeline-panel wow fadeInLeft" data-wow-delay="0.7s" style="">
+                                        <div class="" style="padding: 0;width: 102px;position: relative;float: left">
+                                            <img src="images/x9.png" alt="" style="width: 102px;height: 102px">
+                                        </div>
+                                        <div class="" style="padding: 0 15px 0 135px">
+                                            <div class="timeline-heading">
+                                                <p><br></p>
+                                            </div>
+                                            <div class="timeline-body">
+                                                <div>
+                                                    <div>
+                                                        <p class="txtcolor" style="font-family: 'Srisakdi', cursive;">Vợ yêu sang Thái Lan</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="timeline-foot">Ngày 04 tháng 11 năm 2024</div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li data-anijs="if: scroll, on: window, do: rollIn animated, before: $scrollReveal repeat" class=" col-xs-12">
+                                    <div class="timeline-badge wow fadeInUp" data-wow-delay="0.5s" style="">
+                                        <i class="fas fa-heart"></i>
+                                    </div>
+                                    <div class="timeline-panel wow fadeInLeft" data-wow-delay="0.7s" style="">
+                                        <div class="" style="padding: 0;width: 102px;position: relative;float: left">
+                                            <img src="images/x10.png" alt="" style="width: 102px;height: 102px">
+                                        </div>
+                                        <div class="" style="padding: 0 15px 0 135px">
+                                            <div class="timeline-heading">
+                                                <p><br></p>
+                                            </div>
+                                            <div class="timeline-body">
+                                                <div>
+                                                    <div>
+                                                        <p class="txtcolor" style="font-family: 'Srisakdi', cursive;">Vợ của anh trở về từ Thailand ^^</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="timeline-foot">Ngày 08 tháng 11 năm 2024</div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li data-anijs="if: scroll, on: window, do: rollIn animated, before: $scrollReveal repeat" class="timeline-inverted  col-xs-12">
+                                    <div class="timeline-badge wow fadeInUp" data-wow-delay="0.5s" style="">
+                                        <i class="fas fa-heart"></i>
+                                    </div>
+                                    <div class="timeline-panel wow fadeInLeft" data-wow-delay="0.7s" style="">
+                                        <div class="" style="padding: 0;width: 102px;position: relative;float: left">
+                                            <img src="images/x9.png" alt="" style="width: 102px;height: 102px">
+                                        </div>
+                                        <div class="" style="padding: 0 15px 0 135px">
+                                            <div class="timeline-heading">
+                                                <p><br></p>
+                                            </div>
+                                            <div class="timeline-body">
+                                                <div>
+                                                    <div>
+                                                        <p class="txtcolor" style="font-family: 'Srisakdi', cursive;">Em yêu tránh nóng bên Hàn Quốc...</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="timeline-foot">Ngày 14 tháng 11 năm 2024</div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li data-anijs="if: scroll, on: window, do: rollIn animated, before: $scrollReveal repeat" class=" col-xs-12">
+                                    <div class="timeline-badge wow fadeInUp" data-wow-delay="0.5s" style="">
+                                        <i class="fas fa-heart"></i>
+                                    </div>
+                                    <div class="timeline-panel wow fadeInLeft" data-wow-delay="0.7s" style="">
+                                        <div class="" style="padding: 0;width: 102px;position: relative;float: left">
+                                            <img src="images/x10.png" alt="" style="width: 102px;height: 102px">
+                                        </div>
+                                        <div class="" style="padding: 0 15px 0 135px">
+                                            <div class="timeline-heading">
+                                                <p><br></p>
+                                            </div>
+                                            <div class="timeline-body">
+                                                <div>
+                                                    <div>
+                                                        <p class="txtcolor" style="font-family: 'Srisakdi', cursive;">Việt Nam chào mừng vợ yêu trở lại ^^</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="timeline-foot">Ngày 19 tháng 11 năm 2024</div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li data-anijs="if: scroll, on: window, do: rollIn animated, before: $scrollReveal repeat" class="timeline-inverted  col-xs-12">
+                                    <div class="timeline-badge wow fadeInUp" data-wow-delay="0.5s" style="">
+                                        <i class="fas fa-heart"></i>
+                                    </div>
+                                    <div class="timeline-panel wow fadeInLeft" data-wow-delay="0.7s" style="">
+                                        <div class="" style="padding: 0;width: 102px;position: relative;float: left">
+                                            <img src="images/x9.png" alt="" style="width: 102px;height: 102px">
+                                        </div>
+                                        <div class="" style="padding: 0 15px 0 135px">
+                                            <div class="timeline-heading">
+                                                <p><br></p>
+                                            </div>
+                                            <div class="timeline-body">
+                                                <div>
+                                                    <div>
+                                                        <p class="txtcolor" style="font-family: 'Srisakdi', cursive;">Cuộc gặp mặt đầu tiên của chúng ta sau bao tháng ngày chờ đợi...Anh yêu em, Cát Minh <3</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="timeline-foot">Ngày 03 tháng 12 năm 2024</div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li data-anijs="if: scroll, on: window, do: rollIn animated, before: $scrollReveal repeat" class=" col-xs-12">
+                                    <div class="timeline-badge wow fadeInUp" data-wow-delay="0.5s" style="">
+                                        <i class="fas fa-heart"></i>
+                                    </div>
+                                    <div class="timeline-panel wow fadeInLeft" data-wow-delay="0.7s" style="">
+                                        <div class="" style="padding: 0;width: 102px;position: relative;float: left">
+                                            <img src="images/x10.png" alt="" style="width: 102px;height: 102px">
+                                        </div>
+                                        <div class="" style="padding: 0 15px 0 135px">
+                                            <div class="timeline-heading">
+                                                <p><br></p>
+                                            </div>
+                                            <div class="timeline-body">
+                                                <div>
+                                                    <div>
+                                                        <p class="txtcolor" style="font-family: 'Srisakdi', cursive;">Tiếp tục hành trình yêu xa của chúng ta. Anh nhớ vợ lắm, sớm thôi anh sẽ vào TP.HCM với vợ ^^</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="timeline-foot">Ngày 07 tháng 12 năm 2024</div>
+                                        </div>
+                                    </div>
+                                </li>
                             </ul>
                         </div>
                     </div>
